--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-ST2 SS21 Data Analysis/student_repos_list
-ST2 SS21 Data Analysis/.ipynb_checkpoints
-Python Data Analysis/.ipynb_checkpoints
+Analysis of AI and Student-written Code/student_repos_list
+Analysis of AI and Student-written Code/.ipynb_checkpoints
+Analysis of AI and Human-written Python Code/.ipynb_checkpoints
